kubernetes-deploy/dev/dev.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "angularssl"
  namespace: "angularssl"
  labels:
    app: "angularssl"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "angularssl"
  template:
    metadata:
      labels:
        app: "angularssl"
    spec:
      containers:
      - name: "angularssl"
        image: "gcr.io/mobbuy-qa-microservices/angularssl:0.0.1"
---
kind: Service
apiVersion: v1
metadata:
  name: angularssl
  namespace: angularssl
  labels:
    app: angularssl
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: angularssl
